fix tooltip z-index #2538

--- a/web/css/palettes.css
+++ b/web/css/palettes.css
@@ -205,11 +205,10 @@
 .wv-palettes-class:hover {
   cursor: crosshair;
 }
-/* Bootstrap overrides */
-.wv-palettes-class .tooltip {
+
+.wv-palette-tooltip .tooltip {
   z-index: 1040;
 }
-/* ********* end ********** */
 
 .wv-palettes-class-detail {
   margin: 2px 5px 4px 0;
